testing main content

--- a/index.html
+++ b/index.html
@@ -73,6 +73,54 @@
     </div>
   </section>
 
+  <!-- Main content -->
+  <section>
+    <div class="container-fluid my-3 p-lg-3">
+      <div class="row">
+        <div class="col-lg-6 col-xl-3 my-1 px-5 px-lg-3 p-3">
+          <div class="card bg-dark text-white p-4 obj-zoom-in">
+            <img src="images/site/kt_team_crop.png" class="card-img-top rounded img-thumbnail" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Impresión 3D</h5>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <a href="#" class="btn btn-outline-primary">Go somewhere</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-6 col-xl-3 my-1 px-5 px-lg-3 p-3">
+          <div class="card bg-dark text-white p-4 obj-zoom-in">
+            <img src="images/site/kt_team_crop.png" class="card-img-top rounded" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Manufactura de PCBs</h5>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <a href="#" class="btn btn-outline-success">Go somewhere</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-6 col-xl-3 my-1 px-5 px-lg-3 p-3">
+          <div class="card bg-dark text-white p-4 obj-zoom-in">
+            <img src="images/site/kt_team_crop.png" class="card-img-top rounded-circle" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Acerca de Keidas Technology</h5>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <a href="#" class="btn btn-outline-light">Go somewhere</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-6 col-xl-3 my-1 px-5 px-lg-3 p-3">
+          <div class="card bg-dark text-white p-4 obj-zoom-in">
+            <img src="images/site/kt_team_crop.png" class="card-img-top rounded-circle" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Acerca de Keidas Technology</h5>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <a href="#" class="btn btn-outline-danger">Go somewhere</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
   <!-- Scripts -->
   <!-- jQuery first, then Popper.js, and Bootstrap JS, finally Custom Script -->
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
