padding were changed for xm devices

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
   <section>
     <div class="container-fluid my-3 p-lg-3">
       <div class="row">
-        <div class="col-lg-6 col-xl-3 my-1 px-5 px-lg-3 p-3">
+        <div class="col-lg-6 col-xl-3 my-1 px-sm-5 px-lg-3 p-3">
           <div class="card bg-dark text-white p-4 obj-zoom-in">
             <img src="images/site/kt_team_crop.png" class="card-img-top rounded img-thumbnail" alt="...">
             <div class="card-body">
@@ -87,7 +87,7 @@
             </div>
           </div>
         </div>
-        <div class="col-lg-6 col-xl-3 my-1 px-5 px-lg-3 p-3">
+        <div class="col-lg-6 col-xl-3 my-1 px-sm-5 px-lg-3 p-3">
           <div class="card bg-dark text-white p-4 obj-zoom-in">
             <img src="images/site/kt_team_crop.png" class="card-img-top rounded" alt="...">
             <div class="card-body">
@@ -97,7 +97,7 @@
             </div>
           </div>
         </div>
-        <div class="col-lg-6 col-xl-3 my-1 px-5 px-lg-3 p-3">
+        <div class="col-lg-6 col-xl-3 my-1 px-sm-5 px-lg-3 p-3">
           <div class="card bg-dark text-white p-4 obj-zoom-in">
             <img src="images/site/kt_team_crop.png" class="card-img-top rounded-circle" alt="...">
             <div class="card-body">
@@ -107,7 +107,7 @@
             </div>
           </div>
         </div>
-        <div class="col-lg-6 col-xl-3 my-1 px-5 px-lg-3 p-3">
+        <div class="col-lg-6 col-xl-3 my-1 px-sm-5 px-lg-3 p-3">
           <div class="card bg-dark text-white p-4 obj-zoom-in">
             <img src="images/site/kt_team_crop.png" class="card-img-top rounded-circle" alt="...">
             <div class="card-body">
