--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <div class="collapse navbar-collapse " id="navbarSupportedContent">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item active mx-1">
-              <a class="nav-link" href="#">Inicio <span class="sr-only">(current)</span></a>
+              <a class="nav-link" href="#">Manuel <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item mx-1">
               <a class="nav-link" href="#">Nosotros</a>
