--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
               </div>
             </li>
             <li class="nav-item mx-1">
-              <a class="nav-link" href="#contact" tabindex="-1" aria-disabled="true">Contacto</a>
+              <a class="nav-link" href="#" tabindex="-1" aria-disabled="true">Contacto</a>
             </li>
           </ul>
         </div>
@@ -88,31 +88,57 @@
   </div>
 
   <!-- Main content -->
-  <section>
+  <!-- <section>
     <div class="container-fluid my-3 p-lg-3">
-      <div class="row mx-lg-3 mx-xl-5 px-xl-2 ">
-        <!-- <div class="col-lg-6 my-1 px-sm-5 px-lg-3 p-3 p-xl-4"> -->
-          <div class="col-lg-6 my-1 px-sm-5 px-lg-3 p-3 py-xl-4">
+      <div class="row">
+        <div class="col-lg-6 col-xl-3 my-1 px-sm-5 px-lg-3 p-3">
           <div class="card bg-dark text-white p-4 obj-zoom-in">
-            <div class="row align-items-center">
-              <div class="col-sm-6 content">
-                <img src="images/site/h_3d.png" class="img-fluid img-thumbnail my-2 my-sm-0" alt="">
-              </div>
-              <div class="col-sm-6 content">
-                <img src="images/site/t_3d.png" class="img-fluid img-thumbnail my-2 my-sm-0" alt="">
-              </div>
-            </div>
+            <img src="images/site/kt_team_crop.png" class="card-img-top rounded img-thumbnail" alt="...">
             <div class="card-body">
               <h5 class="card-title">Impresión 3D</h5>
-              <p class="card-text d-none d-sm-block">Diseño y manufactura de piezas prototipo y funcionales fabricados con diversas tecnologías como FDM
-                 (Fused Deposition Modeling) y DLP (Digital Light Processing) en materiales como PLA, ABS, PETG, Filamento Flexible, Resina
-                 Fotosensible.</p>
-              <a href="#" class="btn btn-outline-primary"><i class="fas fa-cube"></i>&nbsp  Ver Detalles</a>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <a href="#" class="btn btn-outline-primary">Go somewhere</a>
             </div>
           </div>
         </div>
-        <!-- <div class="col-lg-6 my-1 px-sm-5 px-lg-3 p-3 p-xl-4"> -->
-          <div class="col-lg-6 my-1 px-sm-5 px-lg-3 p-3 py-xl-4">
+        <div class="col-lg-6 col-xl-3 my-1 px-sm-5 px-lg-3 p-3">
+          <div class="card bg-dark text-white p-4 obj-zoom-in">
+            <img src="images/site/kt_team_crop.png" class="card-img-top rounded" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Manufactura de PCBs</h5>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <a href="#" class="btn btn-outline-success">Go somewhere</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-6 col-xl-3 my-1 px-sm-5 px-lg-3 p-3">
+          <div class="card bg-dark text-white p-4 obj-zoom-in">
+            <img src="images/site/kt_team_crop.png" class="card-img-top rounded-circle" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Acerca de Keidas Technology</h5>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <a href="#" class="btn btn-outline-light">Go somewhere</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-6 col-xl-3 my-1 px-sm-5 px-lg-3 p-3">
+          <div class="card bg-dark text-white p-4 obj-zoom-in">
+            <img src="images/site/kt_team_crop.png" class="card-img-top rounded-circle" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Acerca de Keidas Technology</h5>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <a href="#" class="btn btn-outline-danger">Go somewhere</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section> -->
+
+  <section>
+    <div class="container-fluid my-3 p-lg-3">
+      <div class="row">
+        <div class="col-lg-6 my-1 px-sm-5 px-lg-3 p-3 p-xl-4">
           <div class="card bg-dark text-white p-4 obj-zoom-in">
             <div class="row align-items-center">
               <div class="col-sm-6 content">
@@ -123,43 +149,54 @@
               </div>
             </div>
             <div class="card-body">
-              <h5 class="card-title">Manufactura de PCBs</h5>
-              <p class="card-text d-none d-sm-block">Manufactura de PCB's (máximo dos caras) con acabado de cobre. Ideal para prototipos y entregas rápidas. O bien
-              con Solder Mask, SilkScreen, conexión entre vías y acabado de estaño. Para proyectos que requieren más seriedad y profesionalismo.</p>
-              <a href="#" class="btn btn-outline-primary"><i class="fa fa-microchip"></i>&nbsp  Ver Detalles</a>
+              <h5 class="card-title">Impresión 3D</h5>
+              <p class="card-text">Diseño y manufactura de piezas prototipo y funcionales los cuales son fabricados con diversas tecnologías como FDM
+                 (Fused Deposition Modeling) y DLP (Digital Light Processing) en materiales como PLA, ABS, PETG, Filamento Flexible, Resina
+                 Fotosensible. Además contamos con acabados superficiales que añaden resistencia y estética a las piezas.</p>
+              <a href="#" class="btn btn-outline-primary"><i class="fas fa-cube"></i>&nbsp  Ver Detalles</a>
             </div>
           </div>
         </div>
-        <!-- <div class="col-lg-6 my-1 px-sm-5 px-lg-3 p-3 p-xl-4"> -->
-          <div class="col-lg-6 my-1 px-sm-5 px-lg-3 p-3 py-xl-4">
+        <div class="col-lg-6 my-1 px-sm-5 px-lg-3 p-3 p-xl-4">
           <div class="card bg-dark text-white p-4 obj-zoom-in">
-            <img src="images/site/it.png" class="card-img-top rounded img-thumbnail" alt="...">
+            <div class="row align-items-center">
+              <div class="col-sm-6 content">
+                <img src="images/site/h_3d.png" class="img-fluid img-thumbnail my-2 my-sm-0" alt="">
+              </div>
+              <div class="col-sm-6 content">
+                <img src="images/site/t_3d.png" class="img-fluid img-thumbnail my-2 my-sm-0" alt="">
+              </div>
+            </div>
             <div class="card-body">
-              <h5 class="card-title">Proyectos en General</h5>
-              <p class="card-text d-none d-sm-block"> Si tienes algún proyecto o idea y no sabes por donde comenzar acércate a nosotros, podemos asesorarte y pasar
-                de una idea a un proyecto completoy funcional.</p>
-              <a href="#" class="btn btn-outline-primary"><i class="fas fa-code"></i>&nbsp  Ver Detalles</a>
+              <h5 class="card-title">Manufactura de PCBs</h5>
+              <p class="card-text">Manufactura de PCB's (máximo dos caras) con acabado de cobre. Ideal para prototipos y entregas rápidas. O bien
+              con Solder Mask, SilkScreen, conexión entre vías y acabado de estaño. Para proyectos que requieren más seriedad y profesionalismo.</p>
+              <a href="#" class="btn btn-outline-success">Go somewhere</a>
             </div>
           </div>
         </div>
-        <!-- <div class="col-lg-6 my-1 px-sm-5 px-lg-3 p-3 p-xl-4"> -->
-          <div class="col-lg-6 my-1 px-sm-5 px-lg-3 p-3 py-xl-4">
+        <div class="col-lg-6 my-1 px-sm-5 px-lg-3 p-3 p-xl-4">
           <div class="card bg-dark text-white p-4 obj-zoom-in">
-            <img src="images/site/kt_team_crop.png" class="card-img-top rounded img-thumbnail" alt="...">
+            <img src="images/site/kt_team_crop.png" class="card-img-top rounded" alt="...">
             <div class="card-body">
               <h5 class="card-title">Acerca de Keidas Technology</h5>
-              <p class="card-text d-none d-sm-block">Keidas Technology es una empresa en crecimiento con más de un año manufacturando circuitos digitales e
-                involucrándose en el desarrollo e implementación tecnológica.</p>
-              <a href="#" class="btn btn-outline-primary"><i class="fas fa-user"></i>&nbsp  Ver Detalles</a>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <a href="#" class="btn btn-outline-light">Go somewhere</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-6 my-1 px-sm-5 px-lg-3 p-3 p-xl-4">
+          <div class="card bg-dark text-white p-4 obj-zoom-in">
+            <img src="images/site/kt_team_crop.png" class="card-img-top rounded" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Acerca de Keidas Technology</h5>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <a href="#" class="btn btn-outline-danger">Go somewhere</a>
             </div>
           </div>
         </div>
       </div>
     </div>
-  </section>
-
-  <section id="contact">
-
   </section>
 
   <!-- Footer -->
