Testing About page, float-button and links

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
               <a class="nav-link" href="#">Inicio <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item mx-1">
-              <a class="nav-link" href="#">Nosotros</a>
+              <a class="nav-link" href="about.html">Nosotros</a>
             </li>
             <li class="nav-item dropdown mx-1">
               <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -155,7 +155,7 @@
               <h5 class="card-title d-none d-sm-block">Acerca de Keidas Technology</h5>
               <p class="card-text d-none d-sm-block">Keidas Technology es una empresa en crecimiento con más de un año manufacturando circuitos digitales e
                 involucrándose en el desarrollo e implementación tecnológica.</p>
-              <a href="#" class="btn btn-outline-primary"><i class="fas fa-user"></i>&nbsp  Ver Detalles</a>
+              <a href="about.html" class="btn btn-outline-primary"><i class="fas fa-user"></i>&nbsp  Ver Detalles</a>
             </div>
           </div>
         </div>
@@ -163,6 +163,7 @@
     </div>
   </section>
 
+  <!-- Social media and contact -->
   <section id="contact" class="contact-social py-5">
     <div class="container px-5">
       <div class="row text-light text-center align-items-center">
@@ -197,6 +198,11 @@
       </div>
     </div>
   </section>
+
+  <!-- flotating button -->
+  <a href="#" class="float">
+    <i class="fas fa-chevron-circle-up fa-2x" id="float-button"></i>
+  </a>
 
   <!-- Footer -->
   <footer>
