--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
   <meta name="keywords" content="Keidas Technology, KeidasTechnology">
 
   <!-- Google Font -->
-  <link href="https://fonts.googleapis.com/css?family=Exo+2:400,600&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Exo:400,600&display=swap" rel="stylesheet">
   <!-- Bootstrap -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <!-- Custom Stylesheet -->
@@ -51,7 +51,7 @@
               </a>
               <div class="dropdown-menu bg-dark" aria-labelledby="navbarDropdown">
                 <a class="dropdown-item text-white" href="#">Manufactura de PCBs</a>
-                <a class="dropdown-item text-white" href="#">Impresión 3D</a>
+                <a class="dropdown-item text-white" href="services_3d.html">Impresión 3D</a>
                 <div class="dropdown-divider"></div>
                 <a class="dropdown-item text-white" href="#">Cursos En Linea</a>
               </div>
@@ -65,116 +65,112 @@
     </nav>
   </div>
 
+  <!-- jumbotron -->
+  <section>
+    <div class="jumbotron bg-dark text-light">
+      <div class="container">
+        <h1 class="display-4">Keidas Technology</h1>
+        <p class="lead text-justify">Somos una empresa en crecimiento con más de un año manufacturando
+                          circuitos digitales e involucrándose en el desarrollo e implementación tecnológica. Nuestra
+                          visión es alcanzar un alto nivel de producción de PCB’s (circuitos impresos) e impresión 3D
+                          manteniendo una excelente calidad y respuesta inmediata para satisfacer a nuestros
+                          clientes, particulares e institucionales.</p>
+        <!-- <hr class="my-4"> -->
+        <!-- <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
+        <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a> -->
+      </div>
+    </div>
+  </section>
+
   <!-- Main content -->
 
   <!-- <div class="container marketing team"> -->
   <div class="content-fluid marketing team">
-
+    <div class="container marketing">
       <!-- START THE FEATURETTES -->
 
       <hr class="featurette-divider">
 
       <div class="row featurette text-light">
-        <div class="col-md-7">
-          <h2 class="featurette-heading">First featurette heading. <span class="text-muted">It’ll blow your mind.</span>
+        <div class="col-lg-6">
+          <!-- <h2 class="featurette-heading">First featurette heading. <span class="text-muted">It’ll blow your mind.</span> -->
           </h2>
-          <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod
-            semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus
-            commodo.</p>
+          <p class="lead text-justify text-gray">El equipo de Keidas Technology participó como aliado del <span class="text-bold text-light">Hackathon</span> organizado por
+            <span class="text-bold text-light">Talent Network</span> en <span class="text-bold text-light">Talent Land 2019</span> el evento de tecnología mas grande del año,
+            donde impartimos varios talleres sobre manufactura con CNC e Impresión 3D. Además fabricamos piezas para los participantes
+            del Reto 24 Horas.</p>
         </div>
-        <div class="col-md-5">
-          <svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500"
-            height="500" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false"
-            role="img" aria-label="Placeholder: 500x500">
-            <title>Placeholder</title>
-            <rect width="100%" height="100%" fill="#eee" /><text x="50%" y="50%" fill="#aaa" dy=".3em">500x500</text>
-          </svg>
-        </div>
-      </div>
-
-      <hr class="featurette-divider">
-
-      <div class="row featurette">
-        <div class="col-md-7 order-md-2">
-          <h2 class="featurette-heading">Oh yeah, it’s that good. <span class="text-muted">See for yourself.</span></h2>
-          <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod
-            semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus
-            commodo.</p>
-        </div>
-        <div class="col-md-5 order-md-1">
-          <svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500"
-            height="500" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false"
-            role="img" aria-label="Placeholder: 500x500">
-            <title>Placeholder</title>
-            <rect width="100%" height="100%" fill="#eee" /><text x="50%" y="50%" fill="#aaa" dy=".3em">500x500</text>
-          </svg>
-        </div>
-      </div>
-
-      <hr class="featurette-divider">
-
-      <div class="row featurette">
-        <div class="col-md-7">
-          <h2 class="featurette-heading">And lastly, this one. <span class="text-muted">Checkmate.</span></h2>
-          <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod
-            semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus
-            commodo.</p>
-        </div>
-        <div class="col-md-5">
-          <svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500"
-            height="500" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false"
-            role="img" aria-label="Placeholder: 500x500">
-            <title>Placeholder</title>
-            <rect width="100%" height="100%" fill="#eee" /><text x="50%" y="50%" fill="#aaa" dy=".3em">500x500</text>
-          </svg>
+        <div class="col-lg-6">
+          <!-- Image slider -->
+          <div id="carouselExampleInterval" width="500" class="carousel slide carousel-fade" data-ride="carousel">
+            <div class="carousel-inner">
+              <div class="carousel-item active" data-interval="7000">
+                <img src="images/site/kt_04.png" class="d-block w-100" alt="...">
+              </div>
+              <div class="carousel-item" data-interval="7000">
+                <img src="images/site/kt_01.png" class="d-block w-100" alt="...">
+              </div>
+              <div class="carousel-item" data-interval="7000">
+                <img src="images/site/kt_03.png" class="d-block w-100" alt="...">
+              </div>
+              <div class="carousel-item" data-interval="7000">
+                <img src="images/site/kt_02.png" class="d-block w-100" alt="...">
+              </div>
+            </div>
+            <a class="carousel-control-prev" href="#carouselExampleInterval" role="button" data-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#carouselExampleInterval" role="button" data-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="sr-only">Next</span>
+            </a>
+          </div>
         </div>
       </div>
 
       <hr class="featurette-divider">
 
       <!-- Three columns of text below the carousel -->
+      <div class="">
+        <h3 class="text-primary text-bold">Areas de aplicación</h3>
+      </div>
       <div class="row center">
-        <div class="col-lg-4">
-          <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg"
-            preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: 140x140">
-            <title>Placeholder</title>
-            <rect width="100%" height="100%" fill="#777" /><text x="50%" y="50%" fill="#777" dy=".3em">140x140</text>
-          </svg>
-          <h2>Heading</h2>
-          <p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies
-            vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus
-            magna.</p>
-          <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
+        <div class="col-lg-4 p-xl-4">
+          <div class="text-center">
+            <br>
+            <i class="fab fa-facebook-f fa-3x text-light"></i>
+          </div>
+          <br>
+          <h2 class="text-light text-bold text-center">Manufactura</h2>
+          <p class="text-justify text-gray">Contamos con más de un año manufacturando con diversas maquinas, como son Router CNC, Impresoras 3D
+          con tecnología FDM y DLP.</p>
         </div><!-- /.col-lg-4 -->
-        <div class="col-lg-4">
-          <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg"
-            preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: 140x140">
-            <title>Placeholder</title>
-            <rect width="100%" height="100%" fill="#777" /><text x="50%" y="50%" fill="#777" dy=".3em">140x140</text>
-          </svg>
-          <h2>Heading</h2>
-          <p>Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Cras
-            mattis consectetur purus sit amet fermentum. Fusce dapibus, tellus ac cursus commodo, tortor mauris
-            condimentum nibh.</p>
-          <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
+        <div class="col-lg-4 p-xl-4">
+          <div class="text-center">
+            <br>
+            <i class="fab fa-facebook-f fa-3x text-light"></i>
+          </div>
+          <br>
+          <h2 class="text-light text-bold text-center">Software</h2>
+          <p class="text-justify text-gray">Multiples soluciones de software nos respaldan, desde aplicaciones moviles y paginas web, hasta
+          complejas implementaciones de software en secretarías e industrias.</p>
         </div><!-- /.col-lg-4 -->
-        <div class="col-lg-4">
-          <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg"
-            preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: 140x140">
-            <title>Placeholder</title>
-            <rect width="100%" height="100%" fill="#777" /><text x="50%" y="50%" fill="#777" dy=".3em">140x140</text>
-          </svg>
-          <h2>Heading</h2>
-          <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta
-            felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum
-            massa justo sit amet risus.</p>
-          <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
+        <div class="col-lg-4 p-xl-4">
+          <div class="text-center">
+            <br>
+            <i class="fab fa-facebook-f fa-3x text-light"></i>
+          </div>
+          <br>
+          <h2 class="text-light text-bold text-center">Educación</h2>
+          <p class="text-justify text-gray">Compartir el conocimiento con la comunidad es un aspecto importante jaja ya no se que mas poner
+            hay que ver este pedo en la junta :v.</p>
         </div><!-- /.col-lg-4 -->
       </div><!-- /.row -->
 
       <!-- /END THE FEATURETTES -->
-
     </div><!-- /.container -->
+  </div><!-- /.content-fluid -->
 
   <!-- Social media and contact -->
   <section id="contact" class="contact-social py-5">
@@ -185,9 +181,9 @@
             <h5 class="card-title">Visita nuestras Redes Sociales</h5>
           </div>
           <div class="p-2 justify-content-center">
-            <a href="#"><i class="fab fa-facebook-f fa-2x px-2 obj-zoom-in"></i></a>
-            <a href="#"><i class="fab fa-instagram fa-2x px-2 obj-zoom-in"></i></a>
-            <a href="#"><i class="fab fa-twitter fa-2x px-2 obj-zoom-in"></i></a>
+            <a href="https://www.facebook.com/KeidasTechnology"><i class="fab fa-facebook-f fa-2x px-2 obj-zoom-in"></i></a>
+            <a href="https://www.instagram.com/keidastechnology"><i class="fab fa-instagram fa-2x px-2 obj-zoom-in"></i></a>
+            <a href="https://twitter.com/Keidas_Tech"><i class="fab fa-twitter fa-2x px-2 obj-zoom-in"></i></a>
           </div>
           <div class="d-lg-none">
             <hr>
@@ -205,7 +201,7 @@
             <i class="fab fa-whatsapp px-2"></i> 55-67-84-50-17
           </div>
           <div class="p-2">
-            <a href="#"><i class="fab fa-facebook-messenger px-2"></i> Messenger</a>
+            <a href="https://www.messenger.com/t/KeidasTechnology"><i class="fab fa-facebook-messenger px-2"></i> Messenger</a>
           </div>
         </div>
       </div>
