--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <meta name="keywords" content="Keidas Technology, KeidasTechnology">
 
   <!-- Google Font -->
-  <link href="https://fonts.googleapis.com/css?family=Exo+2:400,600&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Exo:400,600&display=swap" rel="stylesheet">
   <!-- Bootstrap -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <!-- Custom Stylesheet -->
@@ -51,7 +51,7 @@
               </a>
               <div class="dropdown-menu bg-dark" aria-labelledby="navbarDropdown">
                 <a class="dropdown-item text-white" href="#">Manufactura de PCBs</a>
-                <a class="dropdown-item text-white" href="#">Impresión 3D</a>
+                <a class="dropdown-item text-white" href="services_3d.html">Impresión 3D</a>
                 <div class="dropdown-divider"></div>
                 <a class="dropdown-item text-white" href="#">Cursos En Linea</a>
               </div>
@@ -89,13 +89,13 @@
   </div>
 
   <!-- Main content -->
-  <section>
-    <div class="container-fluid my-3 p-lg-3">
-      <div class="row mx-lg-3 mx-xl-5 px-xl-2 ">
+  <section class="team">
+    <div class="container">
+      <div class="row">
         <!-- <div class="col-lg-6 my-1 px-sm-5 px-lg-3 p-3 p-xl-4"> -->
-          <div class="col-lg-6 my-1 px-sm-5 px-lg-3 p-3 py-xl-4">
+          <div class="col-lg-6 my-3">
           <div class="card bg-dark text-white p-4">
-            <h5 class="card-title d-sm-none text-center">Impresión 3D</h5>
+            <h4 class="card-title d-sm-none text-center">Impresión 3D</h4>
             <div class="row align-items-center">
               <div class="col-sm-6 content">
                 <img src="images/site/h_3d.png" class="img-fluid img-thumbnail my-2 my-sm-0" alt="">
@@ -105,18 +105,18 @@
               </div>
             </div>
             <div class="card-body">
-              <h5 class="card-title d-none d-sm-block">Impresión 3D</h5>
+              <h4 class="card-title d-none d-sm-block">Impresión 3D</h4>
               <p class="card-text d-none d-sm-block">Diseño y manufactura de piezas prototipo y funcionales fabricados con diversas tecnologías como FDM
-                 (Fused Deposition Modeling) y DLP (Digital Light Processing) en materiales como PLA, ABS, PETG, Filamento Flexible, Resina
+                 (Fused Deposition Modeling) y DLP (Digital Light Processing) en materiales como PLA, ABS, PETG, Filamento Flexible y Resina
                  Fotosensible.</p>
-              <a href="#" class="btn btn-outline-primary"><i class="fas fa-cube"></i>&nbsp  Ver Detalles</a>
+              <a href="services_3d.html" class="btn btn-outline-primary"><i class="fas fa-cube"></i>&nbsp  Ver Detalles</a>
             </div>
           </div>
         </div>
         <!-- <div class="col-lg-6 my-1 px-sm-5 px-lg-3 p-3 p-xl-4"> -->
-          <div class="col-lg-6 my-1 px-sm-5 px-lg-3 p-3 py-xl-4">
+          <div class="col-lg-6 my-3">
           <div class="card bg-dark text-white p-4">
-            <h5 class="card-title d-sm-none text-center">Manufactura de PCBs</h5>
+            <h4 class="card-title d-sm-none text-center">Manufactura de PCBs</h4>
             <div class="row align-items-center">
               <div class="col-sm-6 content">
                 <img src="images/site/pcb_01.png" class="img-fluid img-thumbnail my-2 my-sm-0" alt="">
@@ -126,7 +126,7 @@
               </div>
             </div>
             <div class="card-body">
-              <h5 class="card-title d-none d-sm-block">Manufactura de PCBs</h5>
+              <h4 class="card-title d-none d-sm-block">Manufactura de PCBs</h4>
               <p class="card-text d-none d-sm-block">Manufactura de PCB's (máximo dos caras) con acabado de cobre. Ideal para prototipos y entregas rápidas. O bien
               con Solder Mask, SilkScreen, conexión entre vías y acabado de estaño. Para proyectos que requieren más seriedad y profesionalismo.</p>
               <a href="#" class="btn btn-outline-primary"><i class="fa fa-microchip"></i>&nbsp  Ver Detalles</a>
@@ -134,12 +134,12 @@
           </div>
         </div>
         <!-- <div class="col-lg-6 my-1 px-sm-5 px-lg-3 p-3 p-xl-4"> -->
-          <div class="col-lg-6 my-1 px-sm-5 px-lg-3 p-3 py-xl-4">
+          <div class="col-lg-6 my-3">
           <div class="card bg-dark text-white p-4">
-            <h5 class="card-title d-sm-none text-center">Proyectos en General</h5>
+            <h4 class="card-title d-sm-none text-center">Proyectos en General</h4>
             <img src="images/site/it.png" class="card-img-top rounded img-thumbnail" alt="...">
             <div class="card-body">
-              <h5 class="card-title d-none d-sm-block">Proyectos en General</h5>
+              <h4 class="card-title d-none d-sm-block">Proyectos en General</h4>
               <p class="card-text d-none d-sm-block"> Si tienes algún proyecto o idea y no sabes por donde comenzar acércate a nosotros, podemos asesorarte y pasar
                 de una idea a un proyecto completoy funcional.</p>
               <a href="#" class="btn btn-outline-primary"><i class="fas fa-code"></i>&nbsp  Ver Detalles</a>
@@ -147,14 +147,13 @@
           </div>
         </div>
         <!-- <div class="col-lg-6 my-1 px-sm-5 px-lg-3 p-3 p-xl-4"> -->
-          <div class="col-lg-6 my-1 px-sm-5 px-lg-3 p-3 py-xl-4">
+          <div class="col-lg-6 my-3">
           <div class="card bg-dark text-white p-4">
-            <h5 class="card-title d-sm-none text-center">Acerca de Keidas Technology</h5>
+            <h4 class="card-title d-sm-none text-center">Acerca de Keidas Technology</h4>
             <img src="images/site/kt_team_crop.png" class="card-img-top rounded img-thumbnail" alt="...">
             <div class="card-body">
-              <h5 class="card-title d-none d-sm-block">Acerca de Keidas Technology</h5>
-              <p class="card-text d-none d-sm-block">Keidas Technology es una empresa en crecimiento con más de un año manufacturando circuitos digitales e
-                involucrándose en el desarrollo e implementación tecnológica.</p>
+              <h4 class="card-title d-none d-sm-block">Acerca de Keidas Technology</h4>
+              <p class="card-text d-none d-sm-block">Conoce mas sobre nosotros</p>
               <a href="about.html" class="btn btn-outline-primary"><i class="fas fa-user"></i>&nbsp  Ver Detalles</a>
             </div>
           </div>
@@ -172,9 +171,9 @@
             <h5 class="card-title">Visita nuestras Redes Sociales</h5>
           </div>
           <div class="p-2 justify-content-center">
-            <a href="#"><i class="fab fa-facebook-f fa-2x px-2 obj-zoom-in"></i></a>
-            <a href="#"><i class="fab fa-instagram fa-2x px-2 obj-zoom-in"></i></a>
-            <a href="#"><i class="fab fa-twitter fa-2x px-2 obj-zoom-in"></i></a>
+            <a href="https://www.facebook.com/KeidasTechnology"><i class="fab fa-facebook-f fa-2x px-2 obj-zoom-in"></i></a>
+            <a href="https://www.instagram.com/keidastechnology"><i class="fab fa-instagram fa-2x px-2 obj-zoom-in"></i></a>
+            <a href="https://twitter.com/Keidas_Tech"><i class="fab fa-twitter fa-2x px-2 obj-zoom-in"></i></a>
           </div>
           <div class="d-lg-none">
             <hr>
@@ -192,7 +191,7 @@
             <i class="fab fa-whatsapp px-2"></i> 55-67-84-50-17
           </div>
           <div class="p-2">
-            <a href="#"><i class="fab fa-facebook-messenger px-2"></i> Messenger</a>
+            <a href="https://www.messenger.com/t/KeidasTechnology"><i class="fab fa-facebook-messenger px-2"></i> Messenger</a>
           </div>
         </div>
       </div>
