Testing PCB page and Projects page

--- a/about.html
+++ b/about.html
@@ -50,10 +50,10 @@
                 Servicios
               </a>
               <div class="dropdown-menu bg-dark" aria-labelledby="navbarDropdown">
-                <a class="dropdown-item text-white" href="#">Manufactura de PCBs</a>
+                <a class="dropdown-item text-white" href="services_pcb.html">Manufactura de PCBs</a>
                 <a class="dropdown-item text-white" href="services_3d.html">Impresión 3D</a>
                 <div class="dropdown-divider"></div>
-                <a class="dropdown-item text-white" href="#">Cursos En Linea</a>
+                <a class="dropdown-item text-white" href="projects.html">Proyectos</a>
               </div>
             </li>
             <li class="nav-item mx-1">
@@ -102,7 +102,7 @@
         </div>
         <div class="col-lg-6">
           <!-- Image slider -->
-          <div id="carouselExampleInterval" width="500" class="carousel slide carousel-fade" data-ride="carousel">
+          <div id="carousel_01" width="500" class="carousel slide carousel-fade" data-ride="carousel">
             <div class="carousel-inner">
               <div class="carousel-item active" data-interval="7000">
                 <img src="images/site/kt_04.png" class="d-block w-100" alt="...">
@@ -116,12 +116,51 @@
               <div class="carousel-item" data-interval="7000">
                 <img src="images/site/kt_02.png" class="d-block w-100" alt="...">
               </div>
+              <div class="carousel-item" data-interval="7000">
+                <img src="images/site/kt_05.png" class="d-block w-100" alt="...">
+              </div>
             </div>
-            <a class="carousel-control-prev" href="#carouselExampleInterval" role="button" data-slide="prev">
+            <a class="carousel-control-prev" href="#carousel_01" role="button" data-slide="prev">
               <span class="carousel-control-prev-icon" aria-hidden="true"></span>
               <span class="sr-only">Previous</span>
             </a>
-            <a class="carousel-control-next" href="#carouselExampleInterval" role="button" data-slide="next">
+            <a class="carousel-control-next" href="#carousel_01" role="button" data-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="sr-only">Next</span>
+            </a>
+          </div>
+        </div>
+      </div>
+
+      <hr class="featurette-divider">
+
+      <div class="row featurette text-light">
+        <div class="col-lg-6 order-lg-2">
+          <!-- <h2 class="featurette-heading">UNAM Motorsports!!
+            <span class="text-muted">It’ll blow your mind.</span>
+          </h2> -->
+          <p class="lead text-justify text-gray">Keidas Technology forma parte de los patrocinadores del equipo de UNAM Motorsports que es
+            una escudería integrada por estudiantes de la Facultad de Ingeniería y del Centro de Investigación de Diseño Industrial de la UNAM.</p>
+        </div>
+        <div class="col-lg-6 order-lg-1">
+          <!-- Image slider -->
+          <div id="carousel_02" width="500" class="carousel slide carousel-fade" data-ride="carousel">
+            <div class="carousel-inner">
+              <div class="carousel-item active" data-interval="7000">
+                <img src="images/site/ab_02.png" class="d-block w-100" alt="...">
+              </div>
+              <div class="carousel-item" data-interval="7000">
+                <img src="images/site/ab_01.png" class="d-block w-100" alt="...">
+              </div>
+              <div class="carousel-item" data-interval="7000">
+                <img src="images/site/ab_03.png" class="d-block w-100" alt="...">
+              </div>
+            </div>
+            <a class="carousel-control-prev" href="#carousel_02" role="button" data-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#carousel_02" role="button" data-slide="next">
               <span class="carousel-control-next-icon" aria-hidden="true"></span>
               <span class="sr-only">Next</span>
             </a>
@@ -139,7 +178,7 @@
         <div class="col-lg-4 p-xl-4">
           <div class="text-center">
             <br>
-            <i class="fab fa-facebook-f fa-3x text-light"></i>
+            <i class="fas fa-microchip fa-3x text-light"></i>
           </div>
           <br>
           <h2 class="text-light text-bold text-center">Manufactura</h2>
@@ -149,7 +188,7 @@
         <div class="col-lg-4 p-xl-4">
           <div class="text-center">
             <br>
-            <i class="fab fa-facebook-f fa-3x text-light"></i>
+            <i class="fas fa-code fa-3x text-light"></i>
           </div>
           <br>
           <h2 class="text-light text-bold text-center">Software</h2>
@@ -159,7 +198,7 @@
         <div class="col-lg-4 p-xl-4">
           <div class="text-center">
             <br>
-            <i class="fab fa-facebook-f fa-3x text-light"></i>
+            <i class="fas fa-chalkboard-teacher fa-3x text-light"></i>
           </div>
           <br>
           <h2 class="text-light text-bold text-center">Educación</h2>
@@ -167,7 +206,7 @@
             hay que ver este pedo en la junta :v.</p>
         </div><!-- /.col-lg-4 -->
       </div><!-- /.row -->
-
+      <hr class="featurette-divider container">
       <!-- /END THE FEATURETTES -->
     </div><!-- /.container -->
   </div><!-- /.content-fluid -->
