--- a/services_3d.html
+++ b/services_3d.html
@@ -50,10 +50,10 @@
                 Servicios
               </a>
               <div class="dropdown-menu bg-dark" aria-labelledby="navbarDropdown">
-                <a class="dropdown-item text-white" href="#">Manufactura de PCBs</a>
+                <a class="dropdown-item text-white" href="services_pcb.html">Manufactura de PCBs</a>
                 <a class="dropdown-item active text-white" href="#">Impresión 3D</a>
                 <div class="dropdown-divider"></div>
-                <a class="dropdown-item text-white" href="#">Cursos En Linea</a>
+                <a class="dropdown-item text-white" href="projects.html">Proyectos</a>
               </div>
             </li>
             <li class="nav-item mx-1">
@@ -72,12 +72,12 @@
     <div class="content-fluid marketing team printing">
       <div class="container marketing">
         <!-- START THE FEATURETTES -->
-
+          <h2 class="text-center text-light text-bold">Impresión 3D</h2>
         <hr class="featurette-divider">
 
         <div class="row featurette text-light">
           <div class="col-lg-6">
-            <h2 class="featurette-heading">Impresion 3D<br><span class="text-muted">Fused Deposition Modeling (FDM)</span>
+            <h2 class="featurette-heading"><span class="text-muted text-bold">Fused Deposition Modeling (FDM)</span>
             </h2>
             <br>
             <p class="lead text-justify text-gray">Contamos con servicio de <span class="text-light text-bold">Impresion 3D</span> en
@@ -118,8 +118,8 @@
         <hr class="featurette-divider">
 
         <div class="row featurette">
-          <div class="col-md-6 order-md-2">
-            <h2 class="featurette-heading text-light">Impresion 3D<br><span class="text-muted">Digital Light Processing (DLP)</span>
+          <div class="col-lg-6 order-lg-2">
+            <h2 class="featurette-heading text-light"><span class="text-muted text-bold">Digital Light Processing (DLP)</span>
             </h2>
             <br>
             <p class="lead text-justify text-gray">También contamos con servicio de <span class="text-light text-bold">Impresion 3D</span> en
@@ -128,7 +128,7 @@
               capa correspondiente y solidifica la <span class="text-light text-bold">Resina Fotosensible</span> contenida en una tina especial;
               con esta tecnología se pueden conseguir impresiones muy precisas y pequeñas, llegando a una resolucion de 50 micrómetros.</p>
           </div>
-          <div class="col-md-6 order-md-1">
+          <div class="col-lg-6 order-lg-1">
             <!-- Image slider -->
             <div id="carousel_02" width="500" class="carousel slide carousel-fade" data-ride="carousel">
               <div class="carousel-inner">
@@ -157,18 +157,18 @@
         <hr class="featurette-divider">
 
         <div class="row featurette">
-          <div class="col-md-6">
-            <h2 class="featurette-heading text-light">Post-procesado </h2>
+          <div class="col-lg-6">
+            <h2 class="featurette-heading"><span class="text-muted text-bold">Post-procesado</span></h2>
             <p class="lead text-gray text-justify">Las pizas de Impresión 3D pueden someterse a procesos de postprocesado para lograr acabados superficiales
               mas esteticos o para agregar resistencia a las piezas, cada proceso depende del material y del uso final que se quiera
               para cada pieza.</p>
           </div>
-          <div class="col-md-6">
+          <div class="col-lg-6">
             <!-- Image slider -->
             <div id="carousel_03" width="500" class="carousel slide carousel-fade" data-ride="carousel">
               <div class="carousel-inner">
                 <div class="carousel-item active" data-interval="7000">
-                  <img src="images/site/s3d_pp_01.png" class="d-block w-100" alt="...">
+                  <img src="images/site/s3d_pp_02.png" class="d-block w-100" alt="...">
                 </div>
                 <div class="carousel-item" data-interval="7000">
                   <img src="images/site/s3d_pp_01.png" class="d-block w-100" alt="...">
@@ -192,8 +192,8 @@
 
     <div class="team">
       <div class="text-light text-center">
-        <h4 class="text-bold">Parametros de Manufactura</h4>
-        <br>
+        <h3 class="text-bold">Parametros de Manufactura</h3>
+        <hr class="featurette-divider container">
       </div>
       <div class="text-gray container">
         <h5 class="text-bold">Modelado por Deposición Fundida:</h5>
