--- a/services_pcb.html
+++ b/services_pcb.html
@@ -30,7 +30,7 @@
   <div class="">
     <nav id="mainNavbar" class="navbar navbar-expand-lg navbar-dark fixed-top">
       <div class="container">
-        <a class="navbar-brand" href="#">
+        <a class="navbar-brand" href="index.html">
           <span id="k">K</span>eidas<br><span id="t">T</span>echnology
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -39,18 +39,18 @@
 
         <div class="collapse navbar-collapse " id="navbarSupportedContent">
           <ul class="navbar-nav ml-auto">
-            <li class="nav-item active mx-1">
-              <a class="nav-link" href="#">Inicio <span class="sr-only">(current)</span></a>
+            <li class="nav-item mx-1">
+              <a class="nav-link" href="index.html">Inicio <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item mx-1">
               <a class="nav-link" href="about.html">Nosotros</a>
             </li>
-            <li class="nav-item dropdown mx-1">
+            <li class="nav-item active dropdown mx-1">
               <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Servicios
               </a>
               <div class="dropdown-menu bg-dark" aria-labelledby="navbarDropdown">
-                <a class="dropdown-item text-white" href="services_pcb.html">Manufactura de PCBs</a>
+                <a class="dropdown-item active text-white" href="#">Manufactura de PCBs</a>
                 <a class="dropdown-item text-white" href="services_3d.html">Impresión 3D</a>
                 <div class="dropdown-divider"></div>
                 <a class="dropdown-item text-white" href="projects.html">Proyectos</a>
@@ -65,101 +65,138 @@
     </nav>
   </div>
 
-  <!-- Image slider -->
-  <div id="carouselExampleInterval" class="carousel slide carousel-fade" data-ride="carousel">
-    <div class="carousel-inner">
-      <div class="carousel-item active" data-interval="7000">
-        <img src="images/site/CoverV01.png" class="d-block w-100" alt="...">
-      </div>
-      <div class="carousel-item" data-interval="7000">
-        <img src="images/site/CoverV02.png" class="d-block w-100" alt="...">
-      </div>
-      <div class="carousel-item" data-interval="7000">
-        <img src="images/site/CoverV03.png" class="d-block w-100" alt="...">
-      </div>
-    </div>
-    <a class="carousel-control-prev" href="#carouselExampleInterval" role="button" data-slide="prev">
-      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-      <span class="sr-only">Previous</span>
-    </a>
-    <a class="carousel-control-next" href="#carouselExampleInterval" role="button" data-slide="next">
-      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-      <span class="sr-only">Next</span>
-    </a>
-  </div>
-
   <!-- Main content -->
-  <section class="team">
-    <div class="container">
-      <div class="row">
-        <!-- <div class="col-lg-6 my-1 px-sm-5 px-lg-3 p-3 p-xl-4"> -->
-          <div class="col-lg-6 my-3">
-          <div class="card bg-dark text-white p-4">
-            <h4 class="card-title d-sm-none text-center">Impresión 3D</h4>
-            <div class="row align-items-center">
-              <div class="col-sm-6 content">
-                <img src="images/site/h_3d.png" class="img-fluid img-thumbnail my-2 my-sm-0" alt="">
+
+  <!-- <div class="container marketing team"> -->
+  <section id="main">
+    <div class="content-fluid marketing team printing">
+      <div class="container marketing">
+        <!-- START THE FEATURETTES -->
+          <h2 class="text-center text-light text-bold">Manufactura de PCBs</h2>
+        <hr class="featurette-divider">
+
+        <div class="row featurette text-light">
+          <div class="col-lg-6">
+            <h2 class="featurette-heading"><span class="text-muted text-bold">Prototipo Rápido</span>
+            </h2>
+            <br>
+            <p class="lead text-justify text-gray"> Manufactura de PCB's (máximo dos caras) con acabado de cobre.
+                            Ideal para prototipos y entregas rápidas, no hay conexión de vías
+                            y no incluye Solder Mask.</p>
+          </div>
+          <div class="col-lg-6">
+            <!-- Image slider -->
+            <div id="carousel_01" width="500" class="carousel slide carousel-fade" data-ride="carousel">
+              <div class="carousel-inner">
+                <div class="carousel-item active" data-interval="7000">
+                  <img src="images/site/spcb_p_01.png" class="d-block w-100" alt="...">
+                </div>
+                <div class="carousel-item" data-interval="7000">
+                  <img src="images/site/spcb_p_02.png" class="d-block w-100" alt="...">
+                </div>
+                <div class="carousel-item" data-interval="7000">
+                  <img src="images/site/spcb_p_03.png" class="d-block w-100" alt="...">
+                </div>
+                <div class="carousel-item" data-interval="7000">
+                  <img src="images/site/spcb_p_04.png" class="d-block w-100" alt="...">
+                </div>
               </div>
-              <div class="col-sm-6 content">
-                <img src="images/site/t_3d.png" class="img-fluid img-thumbnail my-2 my-sm-0" alt="">
-              </div>
-            </div>
-            <div class="card-body">
-              <h4 class="card-title d-none d-sm-block">Impresión 3D</h4>
-              <p class="card-text d-none d-sm-block">Diseño y manufactura de piezas prototipo y funcionales fabricados con diversas tecnologías como FDM
-                 (Fused Deposition Modeling) y DLP (Digital Light Processing) en materiales como PLA, ABS, PETG, Filamento Flexible y Resina
-                 Fotosensible.</p>
-              <a href="services_3d.html" class="btn btn-outline-primary"><i class="fas fa-cube"></i>&nbsp  Ver Detalles</a>
+              <a class="carousel-control-prev" href="#carousel_01" role="button" data-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="sr-only">Previous</span>
+              </a>
+              <a class="carousel-control-next" href="#carousel_01" role="button" data-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="sr-only">Next</span>
+              </a>
             </div>
           </div>
         </div>
-        <!-- <div class="col-lg-6 my-1 px-sm-5 px-lg-3 p-3 p-xl-4"> -->
-          <div class="col-lg-6 my-3">
-          <div class="card bg-dark text-white p-4">
-            <h4 class="card-title d-sm-none text-center">Manufactura de PCBs</h4>
-            <div class="row align-items-center">
-              <div class="col-sm-6 content">
-                <img src="images/site/pcb_01.png" class="img-fluid img-thumbnail my-2 my-sm-0" alt="">
+
+        <hr class="featurette-divider">
+
+        <div class="row featurette">
+          <div class="col-lg-6 order-lg-2">
+            <h2 class="featurette-heading text-light"><span class="text-muted text-bold">Acabado Profesional</span>
+            </h2>
+            <br>
+            <p class="lead text-justify text-gray">Manufactura de PCB's (máximo dos caras) con Solder Mask, SilkScreen
+                            y acabado de estaño. Para proyectos que requieren
+                            más seriedad y profesionalismo.</p>
+          </div>
+          <div class="col-lg-6 order-lg-1">
+            <!-- Image slider -->
+            <div id="carousel_02" width="500" class="carousel slide carousel-fade" data-ride="carousel">
+              <div class="carousel-inner">
+                <div class="carousel-item active" data-interval="7000">
+                  <img src="images/site/spcb_ap_01.png" class="d-block w-100" alt="...">
+                </div>
+                <div class="carousel-item" data-interval="7000">
+                  <img src="images/site/spcb_ap_02.png" class="d-block w-100" alt="...">
+                </div>
+                <div class="carousel-item" data-interval="7000">
+                  <img src="images/site/spcb_ap_03.png" class="d-block w-100" alt="...">
+                </div>
+                <div class="carousel-item" data-interval="7000">
+                  <img src="images/site/spcb_ap_04.png" class="d-block w-100" alt="...">
+                </div>
               </div>
-              <div class="col-sm-6 content">
-                <img src="images/site/pcb_02.png" class="img-fluid img-thumbnail my-2 my-sm-0" alt="">
-              </div>
-            </div>
-            <div class="card-body">
-              <h4 class="card-title d-none d-sm-block">Manufactura de PCBs</h4>
-              <p class="card-text d-none d-sm-block">Manufactura de PCB's (máximo dos caras) con acabado de cobre. Ideal para prototipos y entregas rápidas. O bien
-              con Solder Mask, SilkScreen, conexión entre vías y acabado de estaño. Para proyectos que requieren más seriedad y profesionalismo.</p>
-              <a href="services_pcb.html" class="btn btn-outline-primary"><i class="fa fa-microchip"></i>&nbsp  Ver Detalles</a>
-            </div>
-          </div>
-        </div>
-        <!-- <div class="col-lg-6 my-1 px-sm-5 px-lg-3 p-3 p-xl-4"> -->
-          <div class="col-lg-6 my-3">
-          <div class="card bg-dark text-white p-4">
-            <h4 class="card-title d-sm-none text-center">Cursos y Proyectos en General</h4>
-            <img src="images/site/it.png" class="card-img-top rounded img-thumbnail" alt="...">
-            <div class="card-body">
-              <h4 class="card-title d-none d-sm-block">Proyectos en General</h4>
-              <p class="card-text d-none d-sm-block">Si tienes algún proyecto o idea y no sabes por donde comenzar acércate a nosotros, podemos
-                asesorarte y pasar de una idea a un proyecto completo y funcional.</p>
-              <a href="projects.html" class="btn btn-outline-primary"><i class="fas fa-code"></i>&nbsp  Ver Detalles</a>
+              <a class="carousel-control-prev" href="#carousel_02" role="button" data-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="sr-only">Previous</span>
+              </a>
+              <a class="carousel-control-next" href="#carousel_02" role="button" data-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="sr-only">Next</span>
+              </a>
             </div>
           </div>
         </div>
-        <!-- <div class="col-lg-6 my-1 px-sm-5 px-lg-3 p-3 p-xl-4"> -->
-          <div class="col-lg-6 my-3">
-          <div class="card bg-dark text-white p-4">
-            <h4 class="card-title d-sm-none text-center">Acerca de Keidas Technology</h4>
-            <img src="images/site/kt_team_crop.png" class="card-img-top rounded img-thumbnail" alt="...">
-            <div class="card-body">
-              <h4 class="card-title d-none d-sm-block">Acerca de Keidas Technology</h4>
-              <p class="card-text d-none d-sm-block">Conoce mas sobre nosotros</p>
-              <a href="about.html" class="btn btn-outline-primary"><i class="fas fa-user"></i>&nbsp  Ver Detalles</a>
-            </div>
-          </div>
-        </div>
+
+        <!-- /END THE FEATURETTES -->
+      </div><!-- /.container -->
+    </div><!-- /.content-fluid -->
+
+    <div class="team">
+      <div class="text-light text-center">
+        <h3 class="text-bold">Parametros de Manufactura</h3>
+        <hr class="featurette-divider container">
       </div>
+      <div class="text-gray container">
+        <h5 class="text-bold">Modelado por Deposición Fundida:</h5>
+      </div>
+      <table class="container table table-striped table-dark">
+        <thead>
+          <tr>
+            <th scope="col">#</th>
+            <th scope="col">First</th>
+            <th scope="col">Last</th>
+            <th scope="col">Handle</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <th scope="row">1</th>
+            <td>Mark</td>
+            <td>Otto</td>
+            <td>@mdo</td>
+          </tr>
+          <tr>
+            <th scope="row">2</th>
+            <td>Jacob</td>
+            <td>Thornton</td>
+            <td>@fat</td>
+          </tr>
+          <tr>
+            <th scope="row">3</th>
+            <td>Larry</td>
+            <td>the Bird</td>
+            <td>@twitter</td>
+          </tr>
+        </tbody>
+      </table>
     </div>
+
   </section>
 
   <!-- Social media and contact -->
@@ -199,7 +236,7 @@
   </section>
 
   <!-- flotating button -->
-  <a href="#" class="float">
+  <a href="#top" class="float">
     <i class="fas fa-chevron-circle-up fa-2x" id="float-button"></i>
   </a>
 
